--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,20 @@ button.secondary:hover {
   background-color: #666; /* Hover color for secondary button */
 }
 
+ul {
+  padding: 0;
+}
+
+input {
+  padding: 10px;
+  width: 100%;
+  max-width: 300px;
+}
+
+.main-content input{
+  margin: 5px 0;
+}
+
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
