--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,9 @@ a:hover {
   color: var(--color-dark-blue);
 }
 
+ul {
+  padding: 0;
+}
 button {
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -129,30 +132,19 @@ input {
   padding: 10px;
   width: 100%;
   max-width: 300px;
-  border: 1px solid var(--color-dark-blue);
-  border-radius: 4px;
-}
 
+  background-color: #F7F7F7; /* Light gray background for inputs */
+  color: #000000; /* Black text for contrast */
+  border: 1px solid #E5E5E5; /* Light gray border */
+  border-radius: 4px; /* Rounded corners */
+  outline: none; /* Remove default focus outline */
+}
+input:focus-visible {
+  border: 2px solid var(--color-orange);
+}
 .container {
   box-sizing: border-box;
   padding: 15px;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-  body {
-    font-size: 14px;
-  }
-
-  h1 {
-    font-size: 2em;
-  }
-
-  button {
-    border-color: var(--color-orange);
-  }
-
-  input:focus-visible {
-    border: 1px solid var(--color-orange);
-  }
-}
+ 
