--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .main-content input {
-  margin: 10px 0; /* Increased margin for better spacing */
+  margin: 5px 0; /* Increased margin for better spacing */
  
 }
 
@@ -74,7 +74,7 @@
 }
 
 .titleHolder {
-  padding: 20px 0; /* Increased padding for better spacing */
+  padding: 20px 0 0 0; /* Increased padding for better spacing */
   min-height: 120px;
   text-align: center; /* Center align title holder content */
 }
