--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ button:hover {
 }
 
 button:focus, button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 2px solid #FCA311;
 }
 
 button.secondary {
