chore: game type added

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 .action-btn {
   height: 50px;
-  background-color: #14213D; /* Dark blue for action buttons */
+  background-color: #f57c00; /* Dark blue for action buttons */
   color: #FFFFFF; /* White text */
   border: none; /* No border */
   cursor: pointer; /* Pointer cursor on hover */
