chore: logo added

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 50px);
+  /* height: calc(100vh - 50px); */
   width: 100vw;
   padding: 0 20px; /* Added horizontal padding for better spacing */
   box-sizing: border-box; /* Ensure padding is included in total width */
