--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -5,10 +5,6 @@
   flex-wrap: wrap;
   gap: 15px;
   margin-bottom: 20px;
-} 
-
-.LandingPage .card-container{
-    flex-wrap: nowrap;
 }
 
 .card {
@@ -18,7 +14,6 @@
   border-radius: 12px;
   cursor: pointer;
   font-size: 1em;
-  font-weight: bold;
   transition: all 0.3s;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -26,14 +21,22 @@
   color: #14213D; /* Dark Blue for text */
 }
 
+.teamContainer .card-sm:nth-child(5), .teamContainer .card-sm:nth-child(6){
+  display: none;
+}
+.teamContainer .card-container{
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+
 .card-sm {
-  width: 100px;
+  width: 47%;
   height: 100px;
 }
 .card-bg {
-  width: 120px;
-  height: 120px;
-  padding: 20px;
+  flex:1;
+  height: 100px;
+  padding: 10px;
 }
 
 .card:hover,.card.selected:hover { 
@@ -45,8 +48,7 @@
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transform: scale(1.02);
-
-  
+  font-weight: bold;
 
   background: #14213d;
   color: white;
@@ -57,8 +59,9 @@
 }
 
 .card-rect{
-    width: 200px;
-    height: 70px;
+    /* width: 200px; */
+    flex:1;
+    height: 60px;
 }
 
 
@@ -71,9 +74,8 @@
     color: #000000; /* Use a rich, standout color (adjust as needed) */
     text-transform: uppercase; /* Make the text all uppercase */
     letter-spacing: 2px; /* Add letter spacing for a clean look */
-    margin-bottom: 20px; /* Space between the title and the next section */
     position: relative; /* Position for adding decorative lines */
-    padding-bottom: 10px; /* Space under the title for decoration */
+
   }
   
   /* Decorative underline effect for section-title */
